Refactor TemplateService methods and add update validation in FilesController
- TemplateService: getByKeyword Ð±Ð¾Ð»Ð¾Ð½ getByKeywords method-ÑƒÑƒÐ´Ñ‹Ð½ Ð¿Ð°Ñ€Ð°Ð¼ÐµÑ‚Ñ€Ò¯Ò¯Ð´Ð¸Ð¹Ð½ Ð´Ð°Ñ€Ð°Ð°Ð»Ð»Ñ‹Ð³ Ó©Ó©Ñ€Ñ‡Ð¸Ð»ÑÓ©Ð½ (code-Ð¸Ð¹Ð³ Ñ…Ð¾Ñ‘Ñ€Ð´ÑƒÐ³Ð°Ð°Ñ€ Ð±Ð°Ð¹Ñ€Ð»Ð°Ð»Ð´)

- FilesController: Update Ñ…Ð¸Ð¹Ñ…ÑÐ´ Ó©Ó©Ñ€Ñ‡Ð»Ó©Ð»Ñ‚ Ð±Ð°Ð¹Ñ…Ð³Ò¯Ð¹ Ð±Ð¾Ð» 'No update!' exception ÑˆÐ¸Ð´ÑÑ… Ð»Ð¾Ð³Ð¸Ðº Ð½ÑÐ¼ÑÑÐ½

- Ð‘Ò¯Ñ… controller-ÑƒÑƒÐ´ Ð´Ð°Ñ…ÑŒ TemplateService Ð´ÑƒÑƒÐ´Ð»Ð°Ð³Ñ‹Ð³ ÑˆÐ¸Ð½ÑÑ‡Ð»ÑÑÑÐ½

--- a/application/raptor/template/manage-menu.html
+++ b/application/raptor/template/manage-menu.html
@@ -880,10 +880,12 @@
                 submitter.growNstop();
 
                 const data = new FormData(this);
+                console.log(data);
                 const visible = this.querySelector('input[name="is_visible"]');
                 if (visible) { /* ✅ CHECKBOX NORMALIZE: is_visible → 1/0 */
                     data.set('is_visible', visible.checked ? '1' : '0');
                 }
+                console.log(data);
                 fetch(
                     this.action,
                     {
