moedit v1, motable v2.5 бүрэн гарлаа

--- a/application/raptor/template/dashboard.html
+++ b/application/raptor/template/dashboard.html
@@ -22,6 +22,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
         <link href="{{ index }}/assets/css/dashboard.css" rel="stylesheet">
         <script defer src="{{ index }}/assets/js/dashboard.js"></script>
+        <link href="{{ index }}/assets/css/motable.css" rel="stylesheet">
         <script defer src="{{ index }}/assets/js/motable.js"></script>
     </head>
     <body>
