--- a/application/raptor/template/dashboard.html
+++ b/application/raptor/template/dashboard.html
@@ -20,10 +20,10 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
         <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-        <link href="{{ index }}/assets/css/dashboard.css" rel="stylesheet">
-        <script defer src="{{ index }}/assets/js/dashboard.js"></script>
-        <link href="{{ index }}/assets/css/motable.css" rel="stylesheet">
-        <script defer src="{{ index }}/assets/js/motable.js"></script>
+        <link href="{{ index }}/assets/dashboard/dashboard.css" rel="stylesheet">
+        <script defer src="{{ index }}/assets/dashboard/dashboard.js"></script>
+        <link href="{{ index }}/assets/motable/motable.css" rel="stylesheet">
+        <script defer src="{{ index }}/assets/motable/motable.js"></script>
     </head>
     <body>
         <!-- 
