Complete major release 11

--- a/application/web/template/index.html
+++ b/application/web/template/index.html
@@ -170,7 +170,7 @@
                                         <i class="bi bi-angle-right"></i> {{ 'contact'|text }}
                                     </a>
                                 </li>
-                                {% for item in important_menu %}
+                                {% for item in featured_pages %}
                                     {% if item['link'] is not empty %}
                                         {% set href = item['link'] %}
                                     {% else %}
