--- a/application/web/template/index.html
+++ b/application/web/template/index.html
@@ -1,6 +1,6 @@
 {% set lang = localization.code ?? 'en' %}
 <!DOCTYPE html>
-<html lang="{{ lang }}">
+<html lang="{{ record_code ?? lang }}">
     <head>
         <!--
         =======================================================================
@@ -25,18 +25,16 @@
         -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
-        <title>{{ title }}</title>        
-        {% if description is not empty %}<meta name="description" content="{{ description|e }}">{% endif %}
+        <title>{{ record_title is not empty ? record_title ~ ' | ' ~ title : title }}</title>
+        <meta name="description" content="{{ (record_description ?? description)|e }}">
         {% if favico is not empty %}<link rel="icon" href="{{ favico }}" type="image/x-icon">{% endif %}
         {% if apple_touch_icon is not empty %}<link rel="apple-touch-icon" href="{{ apple_touch_icon }}">{% endif %}
-        {% if config['author'] is not empty %}<meta name="author" content="{{ config['author'] }}">{% endif %}
-        {% if config['generator'] is not empty %}<meta name="generator" content="{{ config['generator']|e }}">{% endif %}
-        {% if config['mobile-web-app-capable'] is not empty %}<meta name="mobile-web-app-capable" content="{{ config['mobile-web-app-capable']|e }}">{% endif %}
-        {% if config['og']['type'] is not empty %}<meta property="og:type" content="{{ config['og']['type']|e }}">{% endif %}
-        {% if config['og']['title'] is not empty %}<meta property="og:title" content="{{ config['og']['title']|e }}">{% endif %}
-        {% if config['og']['description'] is not empty %}<meta property="og:description" content="{{ config['og']['description']|e }}">{% endif %}
-        {% if config['og']['image'] is not empty %}<meta property="og:image" content="{{ config['og']['image']|e }}">{% endif %}
-        {% if config['og']['url'] is not empty %}<meta property="og:url" content="{{ config['og']['url']|e }}">{% endif %}
+        <meta property="og:type" content="{{ record_title is not empty ? 'article' : 'website' }}">
+        <meta property="og:site_name" content="{{ title|e }}">
+        <meta property="og:title" content="{{ (record_title ?? title)|e }}">
+        {% if (record_description ?? description) is not empty %}<meta property="og:description" content="{{ (record_description ?? description)|e }}">{% endif %}
+        {% if record_photo is not empty %}<meta property="og:image" content="{{ record_photo|e }}">{% endif %}
+        {% if logo is not empty and record_photo is empty %}<meta property="og:image" content="{{ logo|e }}">{% endif %}
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
         <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
@@ -92,7 +90,7 @@
                         {% if item['link'] is not empty %}
                             {% set href = item['link'] %}
                         {% else %}
-                            {% set href = 'page'|link({'id':item['id']}) %}
+                            {% set href = 'page'|link({'slug':item['slug']}) %}
                         {% endif %}
                         {% if item['submenu'] is not empty %}
                             <h4 class="text-secondary">
@@ -118,7 +116,7 @@
                         {% if menu['link'] is not empty %}
                             {% set href = menu['link'] %}
                         {% else %}
-                            {% set href = 'page'|link({'id':menu['id']}) %}
+                            {% set href = 'page'|link({'slug':menu['slug']}) %}
                         {% endif %}
                         <h4 class="text-primary">
                             <a href="{{ href }}">
@@ -174,7 +172,7 @@
                                     {% if item['link'] is not empty %}
                                         {% set href = item['link'] %}
                                     {% else %}
-                                        {% set href = 'page'|link({'id':item['id']}) %}
+                                        {% set href = 'page'|link({'slug':item['slug']}) %}
                                     {% endif %}
                                     <li>
                                         <a class="text-light" href="{{ href }}">
